<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="imc_description">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal, acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="tmb_description">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="weight">Peso (Kg)</string>
    <string name="height">Altura (cm)</string>
    <string name="idade">Idade</string>
    <string name="buttonText_calculate">Calcular</string>
    <string name="label_imc">IMC</string>

    <!--    'R.' references-->
    <string name="toastDefeatValue">Informe um valor maior que 0</string>
    <string name="save">Salvar</string>
    <string name="saved">Registro salvo com sucesso ;3</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="imc_response">Seu IMC é: %1$.2f</string>
    <string name="tmb_response">Seu TMB é: %1$.2f</string>
    <string name="listCalculate_response">resultado: %1$.2f, data: %2$s</string>
    <string name="search">Buscar</string>

    <!--    dinamic Button Text-->
    <string name="button1">IMC</string>
    <string name="button2">TMB</string>
</resources>
