<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            android:id="@+id/textImc_description"
            style="@style/TextView_Form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_description" />

        <EditText
            android:id="@+id/inputEdit_weight"
            style="@style/EditText_Form"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/inputEdit_height"
            style="@style/EditText_Form"
            android:hint="@string/height" />

        <Button
            android:id="@+id/button_sendImcCalculator"
            style="@style/Button_Form"
            android:text="@string/buttonText_calculate" />
    </LinearLayout>

</ScrollView>
